--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,17 @@
 {
   "compilerOptions": {
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+      "baseUrl": ".",
+      "paths": {
+          "@pages/*": ["src/pages/*"],
+          "@components/*": ["src/components/*"],
+          "@hooks/*": ["src/hooks/*"],
+          "@styles/*": ["src/styles/*"], 
+          "@images/*": ["public/assets/images/*"],
+          "@services/*": ["src/services/*"],
+          "@public/*": ["public/*"],
+          "@actions/*": ["src/redux/actions/*"],
+          "@layouts/*": ["src/layouts/*"],
+          "@utils/*": ["src/utils/*"]
+      }
   }
 }
