--- a/package.json
+++ b/package.json
@@ -13,10 +13,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "chart.js": "^4.3.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "leaflet": "^1.9.3",
     "next": "13.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-simple-maps": "^3.0.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.0"
   }
 }
