--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@mui/material": "^5.12.3",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "csvtojson": "^2.0.10",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.29",
     "leaflet": "^1.9.3",
     "next": "13.4.1",
     "react": "18.2.0",
